--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "dependencies": {
     "@babel/core": "^7.26.9",
     "@babel/plugin-syntax-flow": "^7.26.0",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-optional-chaining": "^7.25.9",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
-    "react": "^18.0.0",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^18.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "rimraf": "^4.0.0",
     "simplebar": "^6.3.0",
     "simplebar-react": "^3.3.0",
     "styled-components": "^6.1.15",
