--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@4.7.0"
+  "packageManager": "yarn@4.7.0",
+  "devDependencies": {
+    "react-static": "^7.6.2"
+  }
 }
