--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/user-event": "^14.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-loader": "^4.13.1",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "react-static": "^7.6.2",
     "rimraf": "^4.0.0",
     "simplebar": "^6.3.0",
     "simplebar-react": "^3.3.0",
@@ -46,8 +48,5 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@4.7.0",
-  "devDependencies": {
-    "react-static": "^7.6.2"
-  }
+  "packageManager": "yarn@4.7.0"
 }
