--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
-    "react-scripts": "5.0.1",
+    "react-script": "^2.0.5",
+    "react-scripts": "^3.0.1",
+    "react-static": "^0.1.1",
     "rimraf": "^4.0.0",
     "simplebar": "^6.3.0",
     "simplebar-react": "^3.3.0",
     "styled-components": "^6.1.15",
-    "typescript": "^4.0.0",
+    "typescript": "^5.8.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npx react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
