--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18",
+    "react-dom": "18",
+    "react-hot-loader": "4",
     "react-router-dom": "^7.2.0",
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
-    "react-static": "^0.1.1",
+    "react-static": "^7.6.2",
     "rimraf": "^4.0.0",
     "simplebar": "^6.3.0",
     "simplebar-react": "^3.3.0",
