--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,11 +1,10 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "portfolio",
+  "name": "jafeta",
   "compatibility_date": "2025-10-13",
   "assets": {
     "directory": "./build",
-    "not_found_handling": "single-page-application",
-    "binding": "ASSETS"
+    "not_found_handling": "single-page-application"
   },
   "observability": {
     "enabled": true
