--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "axios": "^1.12.2",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.24",
     "react": "18",
     "react-dom": "18",
