--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/plugin-syntax-flow": "^7.26.0",
     "@babel/plugin-transform-class-properties": "^7.25.9",
     "@babel/plugin-transform-optional-chaining": "^7.25.9",
+    "@emailjs/browser": "^4.4.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
